; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/serial/extr_ubsa.c_ubsa_start_write.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/serial/extr_ubsa.c_ubsa_start_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ucom_softc = type { %struct.ubsa_softc* }
%struct.ubsa_softc = type { i32* }

@UBSA_BULK_DT_WR = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ucom_softc*)* @ubsa_start_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ubsa_start_write(%struct.ucom_softc* %0) #0 {
  %2 = alloca %struct.ucom_softc*, align 8
  %3 = alloca %struct.ubsa_softc*, align 8
  store %struct.ucom_softc* %0, %struct.ucom_softc** %2, align 8
  %4 = load %struct.ucom_softc*, %struct.ucom_softc** %2, align 8
  %5 = getelementptr inbounds %struct.ucom_softc, %struct.ucom_softc* %4, i32 0, i32 0
  %6 = load %struct.ubsa_softc*, %struct.ubsa_softc** %5, align 8
  store %struct.ubsa_softc* %6, %struct.ubsa_softc** %3, align 8
  %7 = load %struct.ubsa_softc*, %struct.ubsa_softc** %3, align 8
  %8 = getelementptr inbounds %struct.ubsa_softc, %struct.ubsa_softc* %7, i32 0, i32 0
  %9 = load i32*, i32** %8, align 8
  %10 = load i64, i64* @UBSA_BULK_DT_WR, align 8
  %11 = getelementptr inbounds i32, i32* %9, i64 %10
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @usbd_transfer_start(i32 %12)
  ret void
}

declare dso_local i32 @usbd_transfer_start(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
